--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
-    "@better-auth/expo": "https://pkg.pr.new/better-auth/better-auth/@better-auth/expo@2526",
+    "@better-auth/expo": "^1.2.7",
     "@hono/node-server": "^1.13.8",
     "@prisma/client": "6.5.0",
-    "better-auth": "https://pkg.pr.new/better-auth/better-auth@2526",
+    "better-auth": "^1.2.7",
     "hono": "^4.7.4"
   },
   "devDependencies": {
